# TurtleBot3-Lab

Documentation/: Запуск управления pyqt.md  Как запустить Autorace в автоматическом режиме прохождения?.md  Как запустить в режиме управления через консоль?.md  Установка TurtleBot3 и симуляции на Ubuntu 20.04 Noetic.md
turtlebot3_gui/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebot3_gui/launch/: turtlebot3_complete.launch  turtlebot3_dual_cam.launch  turtlebot3_with_sensors.launch  turtlebot_gui.launch
turtlebot3_gui/src/: camera_processor.py  dual_camera_processor.py  sensor_state_simulator.py  turtlebot_gui.py
turtlebot3_gui/urdf/: turtlebot3_waffle_pi_dual_cam.urdf.xacro
