<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_gui</name>
  <version>0.0.1</version>
  <description>GUI package for controlling TurtleBot3 using PyQt5</description>

  <maintainer email="vanya890@example.com">vanya890</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
  </export>
</package>
